--- a/webserver/website/index.html
+++ b/webserver/website/index.html
@@ -2,19 +2,23 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<title>Play OpenRCT2!</title>
+		<link rel="stylesheet" href="css/index.css"></link>
 	</head>
 
 	<body>
-		<h1>Play OpenRCT2!</h1>
+		<div id="background"></div>
+		<div id="gradient"></div>
+		<div id="content"></div>
+		<!--
+		<form action="upload.php" method="post" enctype="multipart/form-data">
+		    Select image to upload:
+		    <input type="file" name="fileToUpload" id="fileToUpload">
+		    <input type="submit" value="Upload Image" name="submit">
+		</form> -->
 
-<form action="upload.php" method="post" enctype="multipart/form-data">
-    Select image to upload:
-    <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Image" name="submit">
-</form>
-
-		<script src="js/scripts.min.js"></script>
+		<script src="build/scripts.min.js"></script>
 	</body>
 </html>
 
