--- a/webserver/website/index.html
+++ b/webserver/website/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<title>Play OpenRCT2!</title>
-		<link rel="stylesheet" href="css/index.css"></link>
+		<link rel="stylesheet" type="text/css" href="css/index.css"></link>
 	</head>
 
 	<body>
